# ejves-llm-judge

./: .gitignore  PER LAVORO (1).sav  PLAIN_SUMMARY.md  README.md  db (1)_Mario 12.08.xlsx  db ai_rev eg.xlsx  db wd.xlsx  pyproject.toml
data/processed/: human_scores_consensus.csv  human_scores_consensus.parquet  human_scores_long.csv  human_scores_long.parquet  text_mismatches.md
data/raw/: README.md
docs/: ANALYSIS_PLAN.md  RUBRIC.md  STUDY_NARRATIVE.md
outputs/calibration/: agreement_report.md  ensemble_scores.parquet  judge_scores_aggregated.parquet  judge_scores_raw.parquet  methods_addendum.md  phase6_comparator_methodology.md
outputs/comparator/: accuracy_adjudication_3rd_rater.csv  accuracy_adjudication_master.csv  accuracy_adjudication_master.parquet  (+34 more)
revision_package/: 01_response_to_reviewers.docx  01_response_to_reviewers.md  02_change_log.docx  02_change_log.md  03_revised_text_passages.docx  03_revised_text_passages.md  email_to_mario.docx  email_to_mario.md  supplementary_table2_tripod_llm.docx  supplementary_table2_tripod_llm.md
scripts/: 01_load_data.py  02_build_prompts.py  02_run_calibration.py  03_phase3_sanity.py  03_score_new_responses.py  04_write_phase6_fallback.py  05_merge_accuracy_reviews.py  06_prepare_accuracy_adjudication.py  07_finalize_accuracy_adjudication.py  08_generate_comparator_report.py
tests/: test_calibration.py  test_claude_retry.py  test_comparator_report.py  test_data_loader.py  test_dual_accuracy_merge.py  test_phase6_comparator.py  test_phase6_fallback.py  test_prompt_builder.py  test_rubric_validation.py
(+432 files in other folders)
